--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,6 +2,14 @@
   color: #FF725E;
 }
 
+.color-bg{
+  background-color: #FF725E;
+}
+
+#color-btn:hover{
+  background-color: #FF452B;
+}
+
 /* home page component */
 html{
   background-color: #1f1f1f;
@@ -77,4 +85,22 @@ html{
 
 .dropdown-item:hover{
   background-color: #FF725E;
+}
+
+
+/* showtime */
+.date-picker {
+    border: 1px solid #444;
+    background-color: #222;
+    color: #fff;
+}
+
+.card {
+    background-color: #222;
+    border: 1px solid #444;
+    color: #fff;
+}
+
+.card-title, .card-text, .btn {
+    color: #fff;
 }
