--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,6 +10,14 @@
   background-color: #FF452B;
 }
 
+#color-btn:focus{
+  background-color: #FF452B;
+}
+
+#color-btn:active{
+  background-color: #FF452B;
+}
+
 /* home page component */
 html{
   background-color: #1f1f1f;
